@startuml Soul Sync Database Schema

!define primary_key(x) <b><color:#b8860b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&link-intact></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T,#FFAAAA) >>

title Soul Sync - Database Schema (Supabase/PostgreSQL) - Updated

skinparam backgroundColor #bcbcddff
skinparam EntityBackgroundColor #16213e
skinparam EntityBorderColor #0f3460
skinparam EntityFontColor #e94560
skinparam ArrowColor #e94560
skinparam shadowing false

' ============================================
' CORE TABLES
' ============================================

table(users) {
  primary_key(id) : UUID <<PK>>
  --
  column(username) : VARCHAR(50) UNIQUE
  column(email) : VARCHAR(255) UNIQUE NOT NULL
  column(password_hash) : TEXT (nullable for OAuth)
  column(display_name) : VARCHAR(255)
  column(avatar_url) : TEXT
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  column(updated_at) : TIMESTAMPTZ DEFAULT NOW()
}

table(artists) {
  primary_key(id) : UUID <<PK>>
  --
  column(name) : VARCHAR(255) NOT NULL
  column(image_url) : TEXT
  column(followers) : INTEGER DEFAULT 0
  column(monthly_listeners) : INTEGER DEFAULT 0
  column(bio) : TEXT
  column(is_verified) : BOOLEAN DEFAULT FALSE
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  column(updated_at) : TIMESTAMPTZ DEFAULT NOW()
}

table(albums) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(artist_id) : UUID <<FK>>
  column(name) : VARCHAR(255) NOT NULL
  column(cover_url) : TEXT
  column(release_year) : INTEGER
  column(song_count) : INTEGER DEFAULT 0
  column(listen_count) : INTEGER DEFAULT 0
  column(is_public) : BOOLEAN DEFAULT TRUE
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  column(updated_at) : TIMESTAMPTZ DEFAULT NOW()
}

table(songs) {
  primary_key(id) : UUID <<PK>>
  --
  column(title) : VARCHAR(255) NOT NULL
  column(duration) : INTEGER NOT NULL
  column(audio_url) : TEXT NOT NULL
  column(cover_url) : TEXT
  column(play_count) : INTEGER DEFAULT 0
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  column(updated_at) : TIMESTAMPTZ DEFAULT NOW()
}

table(genres) {
  primary_key(id) : UUID <<PK>>
  --
  column(name) : VARCHAR(100) UNIQUE NOT NULL
  column(display_name) : VARCHAR(100) NOT NULL
  column(color) : VARCHAR(7)
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
}

table(playlists) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(owner_id) : UUID <<FK>> (nullable)
  column(name) : VARCHAR(255) NOT NULL
  column(description) : TEXT
  column(cover_url) : TEXT
  column(is_public) : BOOLEAN DEFAULT TRUE
  column(song_count) : INTEGER DEFAULT 0
  column(listen_count) : INTEGER DEFAULT 0
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  column(updated_at) : TIMESTAMPTZ DEFAULT NOW()
}

' ============================================
' JUNCTION TABLES
' ============================================

table(song_artists) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(song_id) : UUID <<FK>>
  foreign_key(artist_id) : UUID <<FK>>
  column(role) : VARCHAR(50) DEFAULT 'main'
  column(position) : INTEGER DEFAULT 0
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  ..
  <<UNIQUE (song_id, artist_id)>>
}

table(album_songs) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(album_id) : UUID <<FK>>
  foreign_key(song_id) : UUID <<FK>>
  column(track_number) : INTEGER DEFAULT 1
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
  ..
  <<UNIQUE (album_id, song_id)>>
}

table(song_genres) {
  foreign_key(song_id) : UUID <<FK>>
  foreign_key(genre_id) : UUID <<FK>>
  ..
  <<PK (song_id, genre_id)>>
}

table(playlist_songs) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(playlist_id) : UUID <<FK>>
  foreign_key(song_id) : UUID <<FK>>
  column(position) : INTEGER NOT NULL
  column(added_at) : TIMESTAMPTZ DEFAULT NOW()
  ..
  <<UNIQUE (playlist_id, song_id)>>
}

' ============================================
' USER ACTIVITY TABLES
' ============================================

table(user_liked_songs) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(user_id) : UUID <<FK>>
  foreign_key(song_id) : UUID <<FK>>
  column(liked_at) : TIMESTAMPTZ DEFAULT NOW()
  ..
  <<UNIQUE (user_id, song_id)>>
}

table(user_follows) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(user_id) : UUID <<FK>>
  foreign_key(artist_id) : UUID <<FK>>
  column(followed_at) : TIMESTAMPTZ DEFAULT NOW()
  ..
  <<UNIQUE (user_id, artist_id)>>
}

table(listening_history) {
  primary_key(id) : UUID <<PK>>
  --
  foreign_key(user_id) : UUID <<FK>>
  foreign_key(song_id) : UUID <<FK>>
  column(listened_at) : TIMESTAMPTZ DEFAULT NOW()
  column(duration_played) : INTEGER DEFAULT 0
  column(completed) : BOOLEAN DEFAULT FALSE
}

' ============================================
' AUTH TABLES
' ============================================

table(password_reset_tokens) {
  primary_key(id) : UUID <<PK>>
  --
  column(email) : VARCHAR(255) NOT NULL
  column(token) : VARCHAR(255) UNIQUE NOT NULL
  column(expires_at) : TIMESTAMPTZ NOT NULL
  column(used) : BOOLEAN DEFAULT FALSE
  column(created_at) : TIMESTAMPTZ DEFAULT NOW()
}

' ============================================
' VIEWS
' ============================================

entity weekly_song_rankings << (V,#AAFFAA) View >> {
  column(id) : UUID
  column(title) : VARCHAR
  column(genre_name) : VARCHAR
  column(genre_display_name) : VARCHAR
  column(weekly_plays) : INTEGER
  column(rank) : INTEGER
}

entity weekly_artist_rankings << (V,#AAFFAA) View >> {
  column(id) : UUID
  column(name) : VARCHAR
  column(image_url) : TEXT
  column(monthly_listeners) : INTEGER
  column(weekly_plays) : INTEGER
  column(rank) : INTEGER
}

entity new_releases << (V,#AAFFAA) View >> {
  column(id) : UUID
  column(title) : VARCHAR
  column(artist_names) : TEXT
  column(album_names) : TEXT
  column(created_at) : TIMESTAMPTZ
}

entity songs_with_artists << (V,#AAFFAA) View >> {
  column(id) : UUID
  column(title) : VARCHAR
  column(duration) : INTEGER
  column(audio_url) : TEXT
  column(cover_url) : TEXT
  column(artist_name) : TEXT
  column(artist_ids) : UUID[]
  column(artist_names_array) : VARCHAR[]
}

' ============================================
' RELATIONSHIPS
' ============================================

' Artist relationships
artists ||--o{ albums : "creates"
artists ||--o{ song_artists : "performs"
artists ||--o{ user_follows : "followed by"

' Song relationships
songs ||--o{ song_artists : "performed by"
songs ||--o{ album_songs : "included in"
songs ||--o{ song_genres : "categorized as"
songs ||--o{ playlist_songs : "added to"
songs ||--o{ user_liked_songs : "liked by"
songs ||--o{ listening_history : "played in"

' Album relationships
albums ||--o{ album_songs : "contains"

' Genre relationships
genres ||--o{ song_genres : "categorizes"

' Playlist relationships
playlists ||--o{ playlist_songs : "has"
users ||--o{ playlists : "owns"

' User relationships
users ||--o{ user_liked_songs : "likes"
users ||--o{ user_follows : "follows"
users ||--o{ listening_history : "listens"

' View relationships
songs ..> weekly_song_rankings : "aggregated"
songs ..> new_releases : "filtered"
artists ..> weekly_artist_rankings : "aggregated"
song_artists ..> songs_with_artists : "joined"

' ============================================
' NOTES
' ============================================

note right of song_artists
  **Junction Table**
  Many-to-many relationship
  between songs and artists
  with role (main/featuring)
end note

note right of album_songs
  **Junction Table**
  Many-to-many relationship
  between albums and songs
  with track ordering
end note

note bottom of listening_history
  **Activity Tracking**
  Records when users play songs
  Used for rankings and history
end note

note bottom of weekly_song_rankings
  **VIEW: weekly_song_rankings**
  Songs ranked by play count
  within last 7 days, grouped by genre
end note

@enduml
